[package]
name = "adventofcode2015"
version = "0.1.0"
authors = ["Florian Lloyd-Pötscher <florian.poetscher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
md5 = "0.7.0"
regex = "1.3.3"
nom = "5.1.0"
cached = "0.11.0"

[lib]
name = "meta"
proc-macro = true
path = "src/meta.rs"

